fixed header and logo name

--- a/project/less/header.less
+++ b/project/less/header.less
@@ -214,12 +214,13 @@
 
   &-item--light {
     opacity: 0.3;
-    @media @view-mobile2 {
-      order: 1
+  }
+  &-item--mob2 {
+    @media @view-min-mobile2 {
+      order: 1;
     }
   }
-
-
+  
 }
 
 .header__logo {
