--- a/project/less/variables.less
+++ b/project/less/variables.less
@@ -3,7 +3,7 @@
 @view-tablets: ~"all and (max-width: 991px)";
 @view-mobile: ~"all and (max-width: 767px)";
 @view-mobile2: ~"all and (max-width: 500px)";
-
+@view-mobile3: ~"all and (max-width: 350px)";
 @view-min-mobile2: ~"all and (min-width: 500px)";
 
 // ============ COLOR =============
