--- a/project/css/style.css
+++ b/project/css/style.css
@@ -326,8 +326,8 @@ body {
 .header__menu-item--light {
   opacity: 0.3;
 }
-@media all and (max-width: 500px) {
-  .header__menu-item--light {
+@media all and (min-width: 500px) {
+  .header__menu-item--mob2 {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
@@ -519,6 +519,11 @@ body {
     width: 100%;
     text-align: center;
     padding: 30px 0px 0;
+  }
+}
+@media all and (max-width: 350px) {
+  .f-main__logo-name {
+    text-align: left;
   }
 }
 .f-main__logo-text {
