--- a/project/less/front.less
+++ b/project/less/front.less
@@ -47,12 +47,15 @@
   &__logo-name {
     padding-right: 50px;
     @media @view-tablets {
-      padding-right: 0px;
+      	padding-right: 0px;
     }
     @media @view-mobile2 {
-      width: 100%;
-      text-align: center;
-      padding: 30px 0px 0;
+    	width: 100%;
+    	text-align: center;
+     	padding: 30px 0px 0;
+    }
+    @media @view-mobile3 {
+    	text-align: left;
     }
   }
   &__logo-text {
